# typer-demo

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml  requirements.txt  typer-demo.spec
.github/workflows/: build.yml
tests/: test_main.py
typer_demo/: main.py
